// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores comment block if feature is unsupported 1`] = `
[
  {
    "children": [
      "Line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 2",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "> Unsupported quote line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "> Unsupported quote line 2",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "> Unsupported quote line 3",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 3",
    ],
    "type": "paragraph",
  },
]
`;

exports[`ignores table if feature is not supported 1`] = `
[
  {
    "children": [
      "Line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 2",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "| col 1 | col 2 | col 3 |",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "| ----- | ----- | ----- |",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "| 1.1   | 1.2   | 1.3   |",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "| 2.1   | 2.2   | 2.3   |",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 3",
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses comment block inside section 1`] = `
[
  {
    "children": [
      "Line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          "Line 2",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          {
            "children": [
              "Quote line 1",
            ],
            "type": "paragraph",
          },
          {
            "children": [
              "Quote line 2",
            ],
            "type": "paragraph",
          },
          {
            "children": [
              "Quote line 3",
            ],
            "type": "paragraph",
          },
        ],
        "type": "quotation",
      },
      {
        "children": [
          "Line 3",
        ],
        "type": "paragraph",
      },
    ],
    "type": "section",
  },
  {
    "children": [
      "Line 4",
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses lines containing no comment block 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
  {
    "content": "Line 4",
    "type": "line",
  },
]
`;

exports[`parses lines to insert bullet-list 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "children": [
      {
        "children": [
          "Bullet 1",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Bullet 2",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Bullet 3",
        ],
        "type": "paragraph",
      },
    ],
    "type": "bulletList",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert code-block 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "codeLines": [
      " - Some code",
      " - Some code with a [link](https://duckduckgo.com)",
    ],
    "language": "",
    "type": "blockCode",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert code-block 2`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "codeLines": [
      " - Some code",
      " - Some code with a [link](https://duckduckgo.com)",
    ],
    "language": "js",
    "type": "blockCode",
    "url": "https://github.com/",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert code-block with language 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "codeLines": [
      " - Some code",
      " - Some code with a [link](https://duckduckgo.com)",
    ],
    "language": "js",
    "type": "blockCode",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert comment block at start 1`] = `
[
  {
    "children": [
      {
        "children": [
          "Quote line 1",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Quote line 2",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Quote line 3",
        ],
        "type": "paragraph",
      },
    ],
    "type": "quotation",
  },
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert comment block in middle 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "children": [
      {
        "children": [
          "Quote line 1",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Quote line 2",
        ],
        "type": "paragraph",
      },
      {
        "children": [
          "Quote line 3",
        ],
        "type": "paragraph",
      },
    ],
    "type": "quotation",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses lines to insert numbered-list 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "content": " 1. Numbered item 1",
    "type": "line",
  },
  {
    "content": " 2. Numbered item 2",
    "type": "line",
  },
  {
    "content": " 3. Numbered item 3",
    "type": "line",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses table 1`] = `
[
  {
    "content": "Line 1",
    "type": "line",
  },
  {
    "content": "Line 2",
    "type": "line",
  },
  {
    "body": {
      "children": [
        {
          "children": [
            null,
            {
              "children": "1.1  ",
              "type": "table-cell",
            },
            {
              "children": "1.2  ",
              "type": "table-cell",
            },
            {
              "children": "1.3  ",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
        {
          "children": [
            null,
            {
              "children": "2.1  ",
              "type": "table-cell",
            },
            {
              "children": "2.2  ",
              "type": "table-cell",
            },
            {
              "children": "2.3  ",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
      ],
      "type": "table-body",
    },
    "head": {
      "children": {
        "children": [
          null,
          {
            "children": "col 1",
            "type": "table-cell",
          },
          {
            "children": "col 2",
            "type": "table-cell",
          },
          {
            "children": "col 3",
            "type": "table-cell",
          },
          null,
        ],
        "type": "table-row",
      },
      "type": "table-head",
    },
    "type": "table",
  },
  {
    "content": "Line 3",
    "type": "line",
  },
]
`;

exports[`parses table 2`] = `
[
  {
    "children": [
      "Line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 2",
    ],
    "type": "paragraph",
  },
  {
    "body": {
      "children": [
        {
          "children": [
            null,
            {
              "children": "1.1  ",
              "type": "table-cell",
            },
            {
              "children": "1.2  ",
              "type": "table-cell",
            },
            {
              "children": "1.3  ",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
        {
          "children": [
            null,
            {
              "children": "2.1  ",
              "type": "table-cell",
            },
            {
              "children": "2.2  ",
              "type": "table-cell",
            },
            {
              "children": "2.3  ",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
      ],
      "type": "table-body",
    },
    "head": {
      "children": {
        "children": [
          null,
          {
            "children": "col 1",
            "type": "table-cell",
          },
          {
            "children": "col 2",
            "type": "table-cell",
          },
          {
            "children": "col 3",
            "type": "table-cell",
          },
          null,
        ],
        "type": "table-row",
      },
      "type": "table-head",
    },
    "type": "table",
  },
  {
    "children": [
      "Line 3",
    ],
    "type": "paragraph",
  },
]
`;

exports[`parses table containing code and links 1`] = `
[
  {
    "children": [
      "Line 1",
    ],
    "type": "paragraph",
  },
  {
    "children": [
      "Line 2",
    ],
    "type": "paragraph",
  },
  {
    "body": {
      "children": [
        {
          "children": [
            null,
            {
              "children": "1.1  ",
              "type": "table-cell",
            },
            {
              "children": "[1.2](https://duckduckgo.com)",
              "type": "table-cell",
            },
            {
              "children": "1.3  ",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
        {
          "children": [
            null,
            {
              "children": "2.1  ",
              "type": "table-cell",
            },
            {
              "children": "2.2                          ",
              "type": "table-cell",
            },
            {
              "children": "\`2.3\`",
              "type": "table-cell",
            },
            null,
          ],
          "type": "table-row",
        },
      ],
      "type": "table-body",
    },
    "head": {
      "children": {
        "children": [
          null,
          {
            "children": "col 1",
            "type": "table-cell",
          },
          {
            "children": "col 2                        ",
            "type": "table-cell",
          },
          {
            "children": "col 3",
            "type": "table-cell",
          },
          null,
        ],
        "type": "table-row",
      },
      "type": "table-head",
    },
    "type": "table",
  },
  {
    "children": [
      "Line 3",
    ],
    "type": "paragraph",
  },
]
`;
